// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when using ISO week dates dates should match the snapshot 1`] = `
{
  "dates": [
    2023-09-25T05:00:00.000Z,
    2023-09-26T05:00:00.000Z,
    2023-09-27T05:00:00.000Z,
    2023-09-28T05:00:00.000Z,
    2023-09-29T05:00:00.000Z,
    2023-09-30T05:00:00.000Z,
    2023-10-01T05:00:00.000Z,
    2023-10-02T05:00:00.000Z,
    2023-10-03T05:00:00.000Z,
    2023-10-04T05:00:00.000Z,
    2023-10-05T05:00:00.000Z,
    2023-10-06T05:00:00.000Z,
    2023-10-07T05:00:00.000Z,
    2023-10-08T05:00:00.000Z,
    2023-10-09T05:00:00.000Z,
    2023-10-10T05:00:00.000Z,
    2023-10-11T05:00:00.000Z,
    2023-10-12T05:00:00.000Z,
    2023-10-13T05:00:00.000Z,
    2023-10-14T05:00:00.000Z,
    2023-10-15T05:00:00.000Z,
    2023-10-16T05:00:00.000Z,
    2023-10-17T05:00:00.000Z,
    2023-10-18T05:00:00.000Z,
    2023-10-19T05:00:00.000Z,
    2023-10-20T05:00:00.000Z,
    2023-10-21T05:00:00.000Z,
    2023-10-22T05:00:00.000Z,
    2023-10-23T05:00:00.000Z,
    2023-10-24T05:00:00.000Z,
    2023-10-25T05:00:00.000Z,
    2023-10-26T05:00:00.000Z,
    2023-10-27T05:00:00.000Z,
    2023-10-28T05:00:00.000Z,
    2023-10-29T05:00:00.000Z,
    2023-10-30T05:00:00.000Z,
    2023-10-31T05:00:00.000Z,
    2023-11-01T05:00:00.000Z,
    2023-11-02T05:00:00.000Z,
    2023-11-03T05:00:00.000Z,
    2023-11-04T05:00:00.000Z,
    2023-11-05T05:00:00.000Z,
  ],
  "dayPickerMonths": [
    DayPickerMonth {
      "date": 2023-10-01T05:00:00.000Z,
      "weeks": [
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-09-25T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-09-26T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-09-27T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-09-28T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-09-29T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-09-30T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-10-01T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 39,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-02T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-03T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-04T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-05T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-06T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-07T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-08T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 40,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-09T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-10T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-11T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-12T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-13T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-14T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-15T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 41,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-16T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-17T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-18T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-19T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-20T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-21T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-22T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 42,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-23T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-24T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-25T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-26T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-27T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-28T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-29T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 43,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-30T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-31T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-11-01T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-11-02T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-11-03T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-11-04T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-11-05T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
          ],
          "weekNumber": 44,
        },
      ],
    },
  ],
}
`;

exports[`when using fixed weeks dates should match the snapshot 1`] = `
[
  2023-10-01T05:00:00.000Z,
  2023-10-02T05:00:00.000Z,
  2023-10-03T05:00:00.000Z,
  2023-10-04T05:00:00.000Z,
  2023-10-05T05:00:00.000Z,
  2023-10-06T05:00:00.000Z,
  2023-10-07T05:00:00.000Z,
  2023-10-08T05:00:00.000Z,
  2023-10-09T05:00:00.000Z,
  2023-10-10T05:00:00.000Z,
  2023-10-11T05:00:00.000Z,
  2023-10-12T05:00:00.000Z,
  2023-10-13T05:00:00.000Z,
  2023-10-14T05:00:00.000Z,
  2023-10-15T05:00:00.000Z,
  2023-10-16T05:00:00.000Z,
  2023-10-17T05:00:00.000Z,
  2023-10-18T05:00:00.000Z,
  2023-10-19T05:00:00.000Z,
  2023-10-20T05:00:00.000Z,
  2023-10-21T05:00:00.000Z,
  2023-10-22T05:00:00.000Z,
  2023-10-23T05:00:00.000Z,
  2023-10-24T05:00:00.000Z,
  2023-10-25T05:00:00.000Z,
  2023-10-26T05:00:00.000Z,
  2023-10-27T05:00:00.000Z,
  2023-10-28T05:00:00.000Z,
  2023-10-29T05:00:00.000Z,
  2023-10-30T05:00:00.000Z,
  2023-10-31T05:00:00.000Z,
  2023-11-01T05:00:00.000Z,
  2023-11-02T05:00:00.000Z,
  2023-11-03T05:00:00.000Z,
  2023-11-04T05:00:00.000Z,
  2023-11-05T05:00:00.000Z,
  2023-11-06T05:00:00.000Z,
  2023-11-07T05:00:00.000Z,
  2023-11-08T05:00:00.000Z,
  2023-11-09T05:00:00.000Z,
  2023-11-10T05:00:00.000Z,
  2023-11-11T05:00:00.000Z,
]
`;

exports[`when using the default options should match the snapshot 1`] = `
{
  "dates": [
    2023-10-01T05:00:00.000Z,
    2023-10-02T05:00:00.000Z,
    2023-10-03T05:00:00.000Z,
    2023-10-04T05:00:00.000Z,
    2023-10-05T05:00:00.000Z,
    2023-10-06T05:00:00.000Z,
    2023-10-07T05:00:00.000Z,
    2023-10-08T05:00:00.000Z,
    2023-10-09T05:00:00.000Z,
    2023-10-10T05:00:00.000Z,
    2023-10-11T05:00:00.000Z,
    2023-10-12T05:00:00.000Z,
    2023-10-13T05:00:00.000Z,
    2023-10-14T05:00:00.000Z,
    2023-10-15T05:00:00.000Z,
    2023-10-16T05:00:00.000Z,
    2023-10-17T05:00:00.000Z,
    2023-10-18T05:00:00.000Z,
    2023-10-19T05:00:00.000Z,
    2023-10-20T05:00:00.000Z,
    2023-10-21T05:00:00.000Z,
    2023-10-22T05:00:00.000Z,
    2023-10-23T05:00:00.000Z,
    2023-10-24T05:00:00.000Z,
    2023-10-25T05:00:00.000Z,
    2023-10-26T05:00:00.000Z,
    2023-10-27T05:00:00.000Z,
    2023-10-28T05:00:00.000Z,
    2023-10-29T05:00:00.000Z,
    2023-10-30T05:00:00.000Z,
    2023-10-31T05:00:00.000Z,
    2023-11-01T05:00:00.000Z,
    2023-11-02T05:00:00.000Z,
    2023-11-03T05:00:00.000Z,
    2023-11-04T05:00:00.000Z,
  ],
  "dayPickerMonths": [
    DayPickerMonth {
      "date": 2023-10-01T05:00:00.000Z,
      "weeks": [
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-01T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-02T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-03T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-04T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-05T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-06T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-07T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 40,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-08T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-09T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-10T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-11T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-12T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-13T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-14T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 41,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-15T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-16T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-17T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-18T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-19T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-20T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-21T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 42,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-22T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-23T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-24T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-25T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-26T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-27T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-28T05:00:00.000Z,
              "displayMonth": undefined,
            },
          ],
          "weekNumber": 43,
        },
        DayPickerWeek {
          "days": [
            DayPickerDay {
              "date": 2023-10-29T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-30T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-10-31T05:00:00.000Z,
              "displayMonth": undefined,
            },
            DayPickerDay {
              "date": 2023-11-01T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-11-02T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-11-03T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
            DayPickerDay {
              "date": 2023-11-04T05:00:00.000Z,
              "displayMonth": 2023-10-01T05:00:00.000Z,
            },
          ],
          "weekNumber": 44,
        },
      ],
    },
  ],
}
`;
